#enable_testing()

add_executable(
  day1
  day1.cc
)

add_executable(
  day2
  day2.cc
)

add_executable(
  day3
  day3.cc
)

add_executable(
  day4
  day4.cc
)

add_executable(
  day5
  day5.cc
)

add_executable(
  day6
  day6.cc
)


# target_link_libraries(
#   gtest_main
#   gmock_main
# )

#include(GoogleTest)
#gtest_discover_tests(hello_test)
